--- a/platforms/android/annotations/build.gradle
+++ b/platforms/android/annotations/build.gradle
@@ -38,17 +38,17 @@ compileTestKotlin {
 }
 
 task sourcesJar(type: Jar, dependsOn:classes) {
-    archiveClassifier = 'sources'
+    archiveClassifier.set('sources')
     from sourceSets.main.allSource
 }
 
-task javadocJar(type: Jar, dependsOn:javadoc) {
-    archiveClassifier = 'javadoc'
-    from javadoc.destinationDir
-}
-
+//task javadocJar(type: Jar, dependsOn:javadoc) {
+//    archiveClassifier.set('javadoc')
+//    from javadoc.destinationDir
+//}
+//
 artifacts {
-    archives javadocJar
+//    archives javadocJar
     archives sourcesJar
 }
 
