--- a/platforms/android/bridge-v8/build.gradle
+++ b/platforms/android/bridge-v8/build.gradle
@@ -5,20 +5,20 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlinx-serialization'
 apply plugin: 'org.jetbrains.dokka'
-apply plugin: 'jacoco-android'
+//apply plugin: 'jacoco-android'
 
 android {
     compileSdkVersion 29
 
-    def versionFile = file('../../../lerna.json')
-    def parsedVersion = new JsonSlurper().parseText(versionFile.text)
-    project.version = parsedVersion.version.toString()
+//    def versionFile = file('../../../lerna.json')
+//    def parsedVersion = new JsonSlurper().parseText(versionFile.text)
+//    project.version = parsedVersion.version.toString()
 
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
-        versionName version
+        versionName VERSION
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -64,7 +64,7 @@ dependencies {
 }
 
 task sourcesJar(type: Jar) {
-    archiveClassifier = 'sources'
+    archiveClassifier.set('sources')
     from android.sourceSets.main.java.srcDirs
 }
 
