--- a/platforms/android/bridge-webview/build.gradle
+++ b/platforms/android/bridge-webview/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlinx-serialization'
 apply plugin: 'org.jetbrains.dokka'
-apply plugin: 'jacoco-android'
+//apply plugin: 'jacoco-android'
 
 android {
     compileSdkVersion 29
@@ -60,7 +60,7 @@ dependencies {
 }
 
 task sourcesJar(type: Jar) {
-    archiveClassifier = 'sources'
+    archiveClassifier.set('sources')
     from android.sourceSets.main.java.srcDirs
 }
 
