--- a/platforms/android/build.gradle
+++ b/platforms/android/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        kotlin_version = '1.3.71'
+        kotlin_version = '1.3.72'
         kotlin_serialization_version = '0.20.0'
         kotlin_metadata_version = '0.1.0'
         k2v8_version = '0.0.1'
@@ -20,13 +20,13 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:4.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
-        classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.9.18"
-        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.4'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.5'
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.10.1"
+//        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.4'
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
+        classpath("org.jfrog.buildinfo:build-info-extractor-gradle:4.15.2")
     }
 }
 
