--- a/platforms/android/gradle.properties
+++ b/platforms/android/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.jvmargs=-Xmx1536m
 # Publishing settings
 GROUP=com.salesforce.nimbus
 # This will get overridden by each modules build
-VERSION=0.0.1
+VERSION=2.0.0-SNAPSHOT
 
 POM_URL=https://github.com/salesforce/nimbus
 POM_SCM_URL=https://github.com/salesforce/nimbus
