--- a/platforms/android/gradle/publishing.gradle
+++ b/platforms/android/gradle/publishing.gradle
@@ -1,52 +1,56 @@
 import groovy.json.JsonSlurper
 
-apply plugin: 'com.jfrog.bintray'
-
-// Android projects need enhanced maven plugin
-if (project.getPlugins().hasPlugin('com.android.application') ||
-        project.getPlugins().hasPlugin('com.android.library')) {
-    apply plugin: 'com.github.dcendents.android-maven'
-} else {
-    apply plugin: 'maven'
-}
-
+apply plugin: "maven-publish"
+apply plugin: "com.jfrog.artifactory"
+apply plugin: "com.jfrog.bintray"
 
 version = VERSION
 group = GROUP
 
-install {
-    repositories.mavenInstaller {
-        pom {
-            project {
-                name project.name
-                url POM_URL
+artifactoryPublish.mustRunAfter build
 
-                packaging POM_PACKAGING
+publishing {
+    publications {
+        mavenPublication(MavenPublication) {
+            artifact sourcesJar
+            if (project.plugins.hasPlugin("com.android.library")) {
+                artifact("$buildDir/outputs/aar/${project.name}-debug.aar")
+//                artifact("$buildDir/outputs/aar/${project.name}-release.aar")
+            } else {
+                artifact("$buildDir/libs/${project.name}-${version}.jar")
+            }
+            groupId group
+            artifactId project.name
+            version version
+            pom {
+                name.set(project.name)
+                url.set(POM_URL)
+
+//                packaging POM_PACKAGING
                 version version
 
                 licenses {
                     license {
-                        name POM_LICENSE_NAME
-                        url POM_LICENSE_URL
+                        name.set(POM_LICENSE_NAME)
+                        url.set(POM_LICENSE_URL)
                     }
                 }
 
                 developers {
                     developer {
-                        name POM_DEVELOPER
+                        name.set(POM_DEVELOPER)
                     }
                 }
 
                 scm {
-                    url POM_SCM_URL
-                    connection POM_SCM_CONNECTION
-                    developerConnection POM_SCM_DEV_CONNECTION
+                    url.set(POM_SCM_URL)
+                    connection.set(POM_SCM_CONNECTION)
+                    developerConnection.set(POM_SCM_DEV_CONNECTION)
                 }
             }
         }
     }
 }
-
 
 bintray {
     def versionFile = file('../../../lerna.json')
@@ -57,7 +61,7 @@ bintray {
     key = project.findProperty('bintrayApiKey') ?: System.getenv('BINTRAY_API_KEY')
     configurations = ['archives']
     publish = true
-    dryRun = false
+    dryRun = true
     pkg {
         name = project.name
         repo = BINTRAY_REPO
@@ -69,5 +73,24 @@ bintray {
             name = versionToPublish
             released = new Date()
         }
+    }
+}
+
+artifactory {
+    contextUrl = 'http://oss.jfrog.org'
+    publish {
+        repository {
+            repoKey = 'oss-snapshot-local'
+            username = project.findProperty('bintrayUser') ?: System.getenv('BINTRAY_USER')
+            password = project.findProperty('bintrayApiKey') ?: System.getenv('BINTRAY_API_KEY')
+        }
+        defaults {
+            publications('mavenPublication')
+            publishArtifacts = true
+            publishPom = true
+        }
+    }
+    resolve {
+        repoKey = 'jcenter'
     }
 }
