--- a/platforms/android/build.gradle
+++ b/platforms/android/build.gradle
@@ -5,12 +5,12 @@ buildscript {
         kotlin_metadata_version = '0.1.0'
         k2v8_version = '0.0.1'
         kotlinpoet_version = '1.5.0'
-        kotlin_test_runner_version = '3.1.5'
+        kotlin_test_runner_version = '3.4.2'
         google_truth_version = '1.0.1'
         j2v8_version = '6.1.0@aar'
         androidx_test_version = '1.1.1'
         espresso_version = '3.2.0'
-        mockk_version = '1.9.3.kotlin12'
+        mockk_version = '1.10.0'
         json_version = '20190722'
     }
 
