--- a/platforms/android/gradle.properties
+++ b/platforms/android/gradle.properties
@@ -1,6 +1,7 @@
 android.enableJetifier=true
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx1536m
+org.gradle.caching=true
 
 # Publishing settings
 GROUP=com.salesforce.nimbus
