--- a/platforms/android/shared-tests/build.gradle
+++ b/platforms/android/shared-tests/build.gradle
@@ -16,7 +16,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
-        versionName version
+        versionName VERSION
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
