--- a/platforms/android/bridge-v8/build.gradle
+++ b/platforms/android/bridge-v8/build.gradle
@@ -1,5 +1,3 @@
-import groovy.json.JsonSlurper
-
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
@@ -9,10 +7,6 @@ apply plugin: 'org.jetbrains.dokka'
 
 android {
     compileSdkVersion 29
-
-//    def versionFile = file('../../../lerna.json')
-//    def parsedVersion = new JsonSlurper().parseText(versionFile.text)
-//    project.version = parsedVersion.version.toString()
 
     defaultConfig {
         minSdkVersion 21
@@ -39,15 +33,13 @@ android {
 }
 
 dependencies {
-    api project(":annotations")
+    implementation(project(":annotations"))
     api project(":core")
-//    api project(path: ":core", "configuration": "default")
-    api "com.salesforce.k2v8:k2v8:$k2v8_version"
-    kapt project(":compiler-v8")
+    implementation("com.salesforce.k2v8:k2v8:$k2v8_version")
 
-    implementation "com.eclipsesource.j2v8:j2v8:$j2v8_version"
+    api("com.eclipsesource.j2v8:j2v8:$j2v8_version")
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$kotlin_serialization_version"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$kotlin_serialization_version"
     androidTestImplementation "androidx.test.ext:junit:$androidx_test_version"
