--- a/platforms/android/bridge-webview/build.gradle
+++ b/platforms/android/bridge-webview/build.gradle
@@ -39,11 +39,10 @@ android {
 }
 
 dependencies {
-    api project(":annotations")
+    implementation(project(":annotations"))
     api project(":core")
-    kapt project(":compiler-webview")
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    api("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version")
 
     testImplementation "org.json:json:$json_version"
     testImplementation "io.kotlintest:kotlintest-runner-junit4:$kotlin_test_runner_version"
