--- a/platforms/android/core-plugins/build.gradle
+++ b/platforms/android/core-plugins/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     compileOnly project(":annotations")
     compileOnly project(":bridge-webview")
     compileOnly project(":bridge-v8")
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compileOnly "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$kotlin_serialization_version"
     compileOnly "com.eclipsesource.j2v8:j2v8:$j2v8_version"
     compileOnly "com.salesforce.k2v8:k2v8:$k2v8_version"
