--- a/platforms/android/demo-app/build.gradle
+++ b/platforms/android/demo-app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlinx-serialization'
 
@@ -26,15 +25,17 @@ android {
 }
 
 dependencies {
+    implementation project(":annotations")
+    implementation project(":core")
     implementation project(":bridge-webview")
     implementation project(":bridge-v8")
     implementation project(":core-plugins")
     kapt project(":compiler-webview")
     kapt project(":compiler-v8")
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$kotlin_serialization_version"
     implementation "com.eclipsesource.j2v8:j2v8:$j2v8_version"
     implementation "androidx.appcompat:appcompat:1.1.0"
-    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
+    implementation "com.salesforce.k2v8:k2v8:$k2v8_version"
 }
