--- a/platforms/android/gradle.properties
+++ b/platforms/android/gradle.properties
@@ -1,4 +1,4 @@
-android.enableJetifier=true
+android.enableJetifier=false
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx1536m
 org.gradle.caching=true
@@ -18,3 +18,9 @@ POM_LICENSE_URL=https://github.com/salesforce/nimbus/blob/master/LICENSE
 
 BINTRAY_ORG=salesforce-mobile
 BINTRAY_REPO=android
+
+android.defaults.buildfeatures.buildconfig=false
+android.defaults.buildfeatures.aidl=false
+android.defaults.buildfeatures.renderscript=false
+android.defaults.buildfeatures.resvalues=false
+android.defaults.buildfeatures.shaders=false
