--- a/platforms/android/annotations/build.gradle
+++ b/platforms/android/annotations/build.gradle
@@ -32,5 +32,5 @@ artifacts {
 }
 
 apply from: rootProject.file('gradle/lint.gradle')
-apply from: rootProject.file('gradle/publishing.gradle')
+//apply from: rootProject.file('gradle/publishing.gradle')
 
