--- a/platforms/android/bridge-v8/build.gradle
+++ b/platforms/android/bridge-v8/build.gradle
@@ -71,4 +71,4 @@ dokka {
 }
 
 apply from: rootProject.file('gradle/lint.gradle')
-apply from: rootProject.file('gradle/publishing.gradle')
+//apply from: rootProject.file('gradle/publishing.gradle')
