--- a/platforms/android/bridge-webview/build.gradle
+++ b/platforms/android/bridge-webview/build.gradle
@@ -73,4 +73,4 @@ dokka {
 }
 
 apply from: rootProject.file('gradle/lint.gradle')
-apply from: rootProject.file('gradle/publishing.gradle')
+//apply from: rootProject.file('gradle/publishing.gradle')
