--- a/platforms/android/compiler-base/build.gradle
+++ b/platforms/android/compiler-base/build.gradle
@@ -36,4 +36,4 @@ artifacts {
 }
 
 apply from: rootProject.file('gradle/lint.gradle')
-apply from: rootProject.file('gradle/publishing.gradle')
+//apply from: rootProject.file('gradle/publishing.gradle')
