--- a/platforms/android/compiler-webview/build.gradle
+++ b/platforms/android/compiler-webview/build.gradle
@@ -38,4 +38,4 @@ artifacts {
 }
 
 apply from: rootProject.file('gradle/lint.gradle')
-apply from: rootProject.file('gradle/publishing.gradle')
+//apply from: rootProject.file('gradle/publishing.gradle')
